# inventory_tracker

./: .gitignore  CHANGES.md  README.md  manage.py  pyproject.toml  requirements.txt
Inventory_tracker/: asgi.py  settings.py  urls.py  views.py  wsgi.py
stock/: models.py  serializers.py  urls.py  views.py
user/: serializers.py  urls.py  views.py
