[project]
name = "inventory-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "mypy>=1.11",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
]
